# meeting_4-12-24

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json
data/: required_courses.txt
source/: analyzer.cpp  application.h  input.cpp  main.cpp  overlapping.cpp  parser.cpp
